--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "chart.js": "^3.1.0",
         "vue": "^2.6.12",
         "vuex": "^3.6.2"
     }
